# Hunter-for-Sonarr

./: .dockerignore  .gitignore  404.html  45.sh  51.sh  56.sh  59.sh  67.sh  77.sh  99.sh  CNAME  Dockerfile  Huntarr.spec  PLEX_UNLINKING_BUG_FIX.md  README.md  UI_MIGRATION.md  app.py  build_windows.bat  check_logs.sh  create-config.sh  debug_credentials.py  docker-compose.build.yml  docker-compose.image.yml  docker-compose.yml  docker-entrypoint.sh  fix_windows_install.bat  huntarr.spec  huntarr_installer.iss  huntarr_windows_fixed.spec  index.html  installer.nsi  main.py  manifest.json  migrate_configs.sh  migrate_to_new_ui.py  migrate_ui.py  monitor_logs.py  package-lock.json  package.json  pyproject.toml  (+9 more)
.github/: DEVELOPMENT_INSTRUCTIONS.md  FUNDING.yml  MEMORY.md  listen.md
docs/: README.md  _sidebar.md  configuration.html  configuration.md  docusaurus.config.js  docusaurus.config.ts  donate.html  dry-run-mode.md  faq.html  faq.md  index.html  installation.html  installation.md  intro.html  macos-installer.md  package-lock.json  package.json  sidebars.js  sidebars.ts  usage.html  usage.md
frontend/: tsconfig.json
frontend2/: index.html  package-lock.json  package.json  postcss.config.cjs  tsconfig.json  vite.config.ts
installer/: README.md  build_windows_installer.py  generate_main.py  generate_spec.py  huntarr-installer.nsi
nginx/: default.conf  nginx.conf
primary/: api.py  app.py  auth.py  config.py  keys_manager.py  main.py  server.py  settings_manager.py  start.sh  state.py  web_server.py
scripts/: api.py  huntarr-sonarr.py  initialize_settings.sh  (+15 more)
(+643 files in other folders)
