[tool.poetry]
name = "huntarr.io"
description = "A specialized utility that automates discovering missing and upgrading your media collection!"
authors = ["Admin9705"]
license = "GPL-3"
readme = "README.md"
package-mode = false
version = "5.0.1"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.0"
requests = "^2.31.0"
waitress = "^2.1.2"
bcrypt = "^4.1.2"
pyotp = "^2.9.0"
qrcode = {extras = ["qil"], version = "^8.1"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
extend-select = ["I"]
